Add new articles to papers.bib and update author name in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -281,8 +281,8 @@ display_categories: # ["blockquotes"] # these categories will be displayed on th
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Ahmad]
+  first_name: [Huzama]
 
   style: apa
   locale: en
